Bug 59211 - mouse wheel does nothing when cursor over plugin.  patch from markh@activestate.com, r=bryner, sr=hyatt.